# forepaw

./: .gitignore  .swift-format  AGENTS.md  CHANGELOG.md  Cargo.toml  Package.resolved  Package.swift  README.md  build.rs  clippy.toml  flake.nix  mise.toml  rust-toolchain.toml
.agents/skills/forepaw/: SKILL.md
.agents/skills/forepaw-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
Sources/Forepaw/: Commands+Action.swift  Commands+Observation.swift  Commands+System.swift  Forepaw.swift  Provider.swift  Version.swift
Sources/ForepawCore/: Annotation.swift  CoordinateValidation.swift  CropRegion.swift  DesktopProvider.swift  ElementTree.swift  EncoderDetection.swift  ForepawError.swift  IconClassParser.swift  KeyCombo+Parse.swift  OCRResult.swift  OutputFormatter.swift  RefAssigner.swift  SnapshotDiff.swift  TreeRenderer.swift
Sources/ForepawDarwin/: AnnotationRenderer.swift  DarwinProvider+Input.swift  DarwinProvider+Screenshot.swift  DarwinProvider+Snapshot.swift  DarwinProvider.swift  ForepawError.swift  KeyCodeMap.swift  OCR.swift  SaliencyDetector.swift
TestApps/ClickTarget/: Package.swift  README.md
TestApps/ClickTarget/Sources/: ClickTargetApp.swift
Tests/ForepawCoreTests/: AnnotationTests.swift  ClickOptionsTests.swift  CoordinateValidationTests.swift  CropRegionTests.swift  DragOptionsTests.swift  ElementTreeTests.swift  EncoderDetectionTests.swift  IconClassParserTests.swift  KeyComboTests.swift  OCROutputTests.swift  OutputFormatterTests.swift  RefAssignerTests.swift  ScreenshotOptionsTests.swift  SnapshotDiffTests.swift  TreeRendererTests.swift
crates/forepaw/: Cargo.toml  README.md
crates/forepaw-cli/: Cargo.toml  README.md  build.rs
crates/forepaw-cli/src/: main.rs
crates/forepaw-cli/src/cli/: action.rs  mod.rs  observation.rs  parse.rs  system.rs
crates/forepaw/examples/: basic-usage.rs
crates/forepaw/src/: lib.rs  log.rs
crates/forepaw/src/core/: annotation.rs  cast.rs  coordinate_validation.rs  crop_region.rs  display.rs  element_tree.rs  encoder_detection.rs  errors.rs  icon_class_parser.rs  key_combo.rs  mod.rs  ocr_result.rs  output_formatter.rs  ref_assigner.rs  ref_cache.rs  role.rs  signature.rs  snapshot_cache.rs  snapshot_diff.rs  temp.rs  text_attrs.rs  tree_pruning.rs  tree_renderer.rs  types.rs
crates/forepaw/src/platform/: mod.rs
crates/forepaw/src/platform/darwin/: annotation.rs  app.rs  cf_convert.rs  display.rs  ffi.rs  hit_test.rs  input.rs  key_code.rs  mod.rs  ocr.rs  screenshot.rs  snapshot.rs  text_attrs.rs
crates/forepaw/src/platform/linux/: action.rs  app.rs  compositor.rs  hit_test.rs  input.rs  key_code.rs  mod.rs  role.rs  snapshot.rs  state.rs
crates/forepaw/src/platform/windows/: app.rs  display.rs  image_ops.rs  input.rs  key_code.rs  mod.rs  ocr.rs  role.rs  screenshot.rs  snapshot.rs
docs/: cross-platform.md  internals.md  performance-macos.md
res/: generate_atspi_data.sh  generate_atspi_roles.sh
scripts/windows/: ocr.ps1  screenshot.ps1  setup-dev.ps1  uia-actions.ps1  walk-uia-tree.ps1
src/: lib.rs  log.rs  main.rs
src/cli/: action.rs  mod.rs  observation.rs  parse.rs  system.rs
src/core/: annotation.rs  cast.rs  coordinate_validation.rs  crop_region.rs  element_tree.rs  encoder_detection.rs  icon_class_parser.rs  key_combo.rs  mod.rs  ocr_result.rs  output_formatter.rs  ref_assigner.rs  role.rs  snapshot_cache.rs  snapshot_diff.rs  temp.rs  tree_renderer.rs  types.rs
src/platform/: mod.rs
src/platform/darwin/: annotation.rs  app.rs  ffi.rs  hit_test.rs  input.rs  key_code.rs  mod.rs  ocr.rs  role.rs  saliency.rs  screenshot.rs  snapshot.rs
src/platform/linux/: app.rs  atspi_roles.rs  hit_test.rs  mod.rs  role.rs  snapshot.rs
src/platform/windows/: app.rs  hit_test.rs  mod.rs  ocr.rs  screenshot.rs  snapshot.rs
