[package]
name = "forepaw"
version = "0.3.0"
edition = "2021"
license = "Unlicense"
description = "A raccoon's paws on your desktop. Cross-platform automation CLI. Control any application through accessibility trees, OCR, and input simulation."
repository = "https://github.com/aviraccoon/forepaw"
categories = ["command-line-utilities", "accessibility"]
keywords = ["accessibility", "desktop-automation", "ocr", "a11y", "cli"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "NSScreen",
    "NSImage",
    "NSGraphicsContext",
    "NSBitmapImageRep",
] }
objc2-core-graphics = "0.3"
objc2-core-foundation = "0.3"
objc2-vision = { version = "0.3", features = [
    "VNRecognizeTextRequest",
    "VNRequestHandler",
    "VNObservation",
    "VNTypes",
    "block2",
] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
image = "0.25"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",          # PrintWindow + PRINT_WINDOW_FLAGS
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Graphics_Imaging",
    "Media_Ocr",
] }
windows-future = "0.3"

# Clippy lint configuration.
#
# pedantic is denied as baseline (broadly useful, new lints auto-appear).
# restriction lints are cherry-picked (no blanket category enable).
# Promote individual lints from allow to warn, then warn to deny as cleaned.
# Discover new lints with `mise run lint-strict`.
#
# Test exceptions live in clippy.toml.

[lints.rust]
unreachable_pub                 = "warn"
unused_qualifications           = "warn"
missing_docs                    = "allow"   # bookmark: enable when lib surface matters
missing_debug_implementations   = "allow"   # bookmark: enable when lib surface matters

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
cargo   = { level = "warn", priority = -1 }

# -- Cherry-picked restriction lints (all active at warn) ----------------

# Don't Panic
string_slice              = "warn"
indexing_slicing          = "warn"
unwrap_used               = "warn"
panic                     = "warn"
todo                      = "warn"
unimplemented             = "warn"

# Unsafe / Memory Discipline
undocumented_unsafe_blocks     = "warn"
multiple_unsafe_ops_per_block  = "warn"
unnecessary_safety_doc         = "warn"
unnecessary_safety_comment     = "warn"
mem_forget                     = "warn"

# Tripwires (zero warnings currently)
allow_attributes          = "warn"
dbg_macro                 = "warn"
let_underscore_must_use   = "warn"
rc_mutex                  = "warn"
infinite_loop             = "warn"
semicolon_if_nothing_returned = "warn"
wildcard_imports          = "warn"
unused_async              = "warn"
redundant_type_annotations = "warn"
string_add                = "warn"
ref_option                = "warn"
use_self                  = "warn"
str_to_string             = "warn"
