[workspace]
members = ["crates/forepaw", "crates/forepaw-cli"]
resolver = "2"

# Workspace-level lint configuration.
# Both crates inherit via `[lints] workspace = true`.
#
# pedantic is denied as baseline (broadly useful, new lints auto-appear).
# restriction lints are cherry-picked (no blanket category enable).
# Promote individual lints from allow to warn, then warn to deny as cleaned.
# Discover new lints with `mise run lint-strict`.
#
# Test exceptions live in clippy.toml.

[workspace.lints.rust]
unreachable_pub                 = "warn"
unused_qualifications           = "warn"
missing_docs                    = "warn"
missing_debug_implementations   = "warn"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
cargo   = { level = "warn", priority = -1 }

# -- Cherry-picked restriction lints (all active at warn) ----------------

# Don't Panic
string_slice              = "warn"
indexing_slicing          = "warn"
unwrap_used               = "warn"
panic                     = "warn"
todo                      = "warn"
unimplemented             = "warn"

# Unsafe / Memory Discipline
undocumented_unsafe_blocks     = "warn"
multiple_unsafe_ops_per_block  = "warn"
unnecessary_safety_doc         = "warn"
unnecessary_safety_comment     = "warn"
mem_forget                     = "warn"

# Tripwires (zero warnings currently)
allow_attributes          = "warn"
dbg_macro                 = "warn"
let_underscore_must_use   = "warn"
rc_mutex                  = "warn"
infinite_loop             = "warn"
semicolon_if_nothing_returned = "warn"
wildcard_imports          = "warn"
unused_async              = "warn"
redundant_type_annotations = "warn"
string_add                = "warn"
ref_option                = "warn"
use_self                  = "warn"
str_to_string             = "warn"
print_stdout              = "warn"
unused_result_ok          = "warn"
assertions_on_result_states = "warn"
wildcard_enum_match_arm   = "warn"

# -- Audited lints (not enabled, applied one-time) --------------------
# exhaustive_structs/enums: #[non_exhaustive] added selectively to public API
#   types. Error enums, growing enums (Role, ImageFormat), and result structs.
#   Options/data-bag structs (SnapshotOptions, ClickOptions, etc.) are left
#   exhaustive since callers set all fields via struct literal syntax.
# pattern_type_mismatch: conflicts with needless_borrowed_reference, fights
#   Rust's ergonomics for marginal ownership clarity. Not worth enabling.
